tests/e2e/snapshots/test__e2e__flow__moonup_default.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - default
    - latest
---
success: true
exit_code: 0
----- stdout -----
✔ Default toolchain set to version 'latest'

----- stderr -----
