tests/e2e/snapshots/test__e2e__flow__moonup_default_2.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - default
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Please provide a toolchain version to set as default
