tests/e2e/snapshots/test__e2e__flow__moonup_install_list_available_mock.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - install
    - "--list-available"
  env:
    MOONUP_DIST_SERVER: "http://127.0.0.1:41087"
    MOONUP_HOME: /tmp/.tmp0CnOcW/.moonup
    MOON_HOME: /tmp/.tmp0CnOcW/.moon
---
success: true
exit_code: 0
----- stdout -----
Available channel(s):
  latest (0.10.1+a46be2066)
  nightly (0.10.2+f06d4fbd5, 2026-06-26)
  bleeding (0.1.20250525+30d3f4e0d)

----- stderr -----
