tests/e2e/snapshots/test__e2e__flow__moonup_pin.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - pin
    - nightly
---
success: true
exit_code: 0
----- stdout -----
✔ Pinned toolchain to version 'nightly'
Toolchain file: [TEMP_FILE]

----- stderr -----
