tests/e2e/snapshots/test__e2e__flow__moonup_update_no_selfupdate.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - update
    - "--no-self-update"
---
success: true
exit_code: 0
----- stdout -----
latest toolchain is not installed, run 'moonup install latest' to install
nightly toolchain is not installed, run 'moonup install nightly' to install

----- stderr -----
